# line_tracking_race

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: car_control.yaml  car_properties.yaml
docs/: README.md
launch/: car_control_interface.launch  car_world.launch  empty_race.launch  race_track.launch
line_tracking_race_application/: CMakeLists.txt  package.xml
line_tracking_race_bringup/: CMakeLists.txt  package.xml
line_tracking_race_bringup/config/: car_control_diff_drive.yaml  car_properties.yaml  line_tracking_race.rviz  ros_gz_bridge.yaml  ros_gz_bridge_gazebo_control.yaml  ros_gz_bridge_ros2_control.yaml
line_tracking_race_bringup/launch/: line_tracking_race.launch.py
line_tracking_race_description/: CMakeLists.txt  package.xml
line_tracking_race_description/models/line_track/: model.config  track.sdf
line_tracking_race_description/models/urdf/: car.urdf.xacro
line_tracking_race_description/models/urdf/car/: car_camera.xacro  car_core.xacro  car_diff_drive.xacro  car_gazebo_control.xacro  car_inertial.xacro  car_materials.xacro  car_properties.xacro  car_ros2_control.xacro  car_wheel_macro.xacro
line_tracking_race_gazebo/: CMakeLists.txt  package.xml
line_tracking_race_gazebo/worlds/: race_track.world
models/: course.material
models/track/: track.material
models/urdf/: car.xacro
resources/urdf/: car.urdf  car.xacro  car_1.urdf  car_eff.xacro
ros_gz_example_bringup/config/: ros_gz_example_bridge.yaml
ros_gz_example_description/models/diff_drive/: model.config  model.sdf
ros_gz_example_gazebo/worlds/: diff_drive.sdf
worlds/: track.world  yellow_line.world
