<?xml version="1.0"?>
<package format="2">
  <name>line_tracking_race</name>
  <version>0.0.0</version>
  <description>The line_tracking_race package</description>

  <maintainer email="roscourse@todo.todo">roscourse</maintainer>
  <maintainer email="d.caradonna@santannapisa.it"> Daniele Caradonna</maintainer>
  <maintainer email="f.iori@santannapisa.it"> Francesco Iori</maintainer>
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <!-- Example:  -->
  <!-- One maintainer tag required, multiple allowed, one person per tag -->

  <license>TODO</license>

  <!-- Catkin -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- Build Depend -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Build Export Depend -->
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <!-- Exec Depend -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
