<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>line_tracking_race_description</name>
  <version>0.1.0</version>
  <description>SDFormat description files for the line_tracking_race project</description>
  <license>Apache 2.0</license>
  <maintainer email="d.caradonna@santannapisa.it"> Daniele Caradonna</maintainer>
  <maintainer email="f.iori@santannapisa.it"> Francesco Iori</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
   <build_type>ament_cmake</build_type>
   <gazebo_ros gazebo_model_path="${prefix}/../"/>
  </export>
</package>
